Fix overflow for nested code blocks

--- a/sass/post.scss
+++ b/sass/post.scss
@@ -1,4 +1,5 @@
 .post {
+  width: 100%;
   max-width: var(--site-width);
 
   &__header {
